Bug 64754 - balance-manager app produces malformed HTML -- missing </tr>
Summary: balance-manager app produces malformed HTML -- missing </tr>
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy_balancer (show other bugs)
Version: 2.5-HEAD
Hardware: PC Linux
: P2 minor (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-20 00:41 UTC by Todd Lewis
Modified: 2020-10-03 06:09 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd Lewis 2020-09-20 00:41:05 UTC
The balance-manager internal application is missing a "</tr>" before a "</table>" around line 1650. Trunk currently has

            ap_rprintf(r, "<td>%s</td>\n",
                       !balancer->s->inactive ? "Yes" : "No");
            ap_rputs("</table>\n<br />", r);

I'd suggest adding the "</tr>" either like this:

            ap_rprintf(r, "<td>%s</td>\n",
                       !balancer->s->inactive ? "Yes" : "No");
            ap_rputs("</tr>\n</table>\n<br />", r);

or like this:

            ap_rprintf(r, "<td>%s</td>\n</tr>\n",
                       !balancer->s->inactive ? "Yes" : "No");
            ap_rputs("</table>\n<br />", r);
Comment 1 Christophe JAILLET 2020-10-03 06:09:35 UTC
Hi,

thanks for spotting it.
This has been fixed in trunk in r1882210.

This will be proposed for backport in 2.4.x in a near future.