Add a missing </tr>

PR 64754

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1882210 13f79535-47bb-0310-9956-ffa450edef68